tests/test_assets/semantic/valid/void_values/discarded_call.cog
does_nothing::() -> void {
}

test::() {
    does_nothing();
}