tests/test_assets/semantic/invalid/void_values/inferred_variable.cog
does_nothing::() -> void {
}

test::() {
    x := does_nothing();
}